fix: basic traversal

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "Mikeal Rogers <mikeal.rogers@gmail.com> (https://www.mikealrogers.com/)",
   "license": "(Apache-2.0 AND MIT)",
   "dependencies": {
-    "@ipld/block": "^1.0.1",
+    "@ipld/block": "^2.0.1",
     "cids": "^0.7.1",
     "class-is": "^1.1.0"
   },
   "devDependencies": {
-    "standard": "^12.0.1"
+    "mocha": "^6.1.4",
+    "standard": "^12.0.1",
+    "tsame": "^2.0.1"
   }
 }
