--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@ipld/block": "^2.0.3",
     "cids": "^0.7.1",
-    "class-is": "^1.1.0"
+    "class-is": "^1.1.0",
+    "iamap": "~0.1.2",
+    "murmurhash3js-revisited": "~3.0.0"
   },
   "devDependencies": {
     "mocha": "^6.1.4",
