--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@ipld/types",
   "version": "0.0.0",
-  "description": "",
   "main": "src/index.js",
   "scripts": {
     "test": "mocha test/*.spec.js"
@@ -18,5 +17,17 @@
     "mocha": "^6.1.4",
     "standard": "^12.0.1",
     "tsame": "^2.0.1"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ipld/js-types.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ipld/js-types/issues"
+  },
+  "homepage": "https://github.com/ipld/js-types#readme",
+  "description": ""
 }
