--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "devDependencies": {
     "mocha": "^6.1.4",
-    "standard": "^12.0.1",
-    "tsame": "^2.0.1"
+    "referee": "~1.2.0",
+    "standard": "^12.0.1"
   },
   "directories": {
     "test": "test"
