--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@ipld/block": "^2.0.3",
     "cids": "^0.7.1",
-    "class-is": "^1.1.0"
+    "class-is": "^1.1.0",
+    "iavector": "0.0.0"
   },
   "devDependencies": {
     "mocha": "^6.1.4",
